@@ -20,10 +20,6 @@
 # Use G1 Garbage Collector (Optimized for performance)
 -XX:+UseG1GC
 
-# Disable old collectors (CMS/ParNew) for better consistency with G1
--XX:-UseParNewGC
--XX:-UseConcMarkSweepGC
-
 # Set parallel GC threads to 4 (to take advantage of multi-core CPUs)
 -XX:ParallelGCThreads=4
 
@@ -69,12 +65,6 @@
 ##################
 # Disable Explicit Garbage Collection calls to save CPU cycles
 -XX:+DisableExplicitGC
-
-# Allow concurrent garbage collection to improve responsiveness
--XX:+ExplicitGCInvokesConcurrent
-
-# Disable bytecode verification to speed up startup and reduce CPU load
--Xverify:none
 
 ##################
 # Debugging/Logging (Optional but useful for diagnostics)
